--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
 <meta name="6f6f1d313e9a696599ce7cf4f92c7cd76e9edb77" content="6f6f1d313e9a696599ce7cf4f92c7cd76e9edb77" />
 
+     <!-- adsterra شركة -->
+    
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopkick: Gift Cards & Rewards - Earn Rewards While Shopping</title>
