--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="6f6f1d313e9a696599ce7cf4f92c7cd76e9edb77" content="6f6f1d313e9a696599ce7cf4f92c7cd76e9edb77" />
 
      <!-- adsterra شركة -->
-    
+    <script type='text/javascript' src='//pl27991202.effectivegatecpm.com/47/11/4d/47114d2abc42893b5eb6e71ce94c9853.js'></script>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopkick: Gift Cards & Rewards - Earn Rewards While Shopping</title>
