Insert hilltopads script in index.html
Added a new script for hilltopads advertising.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
 
      <!-- adsterra شركة -->
     <script type='text/javascript' src='//pl27991202.effectivegatecpm.com/47/11/4d/47114d2abc42893b5eb6e71ce94c9853.js'></script>
+<!-- hilltopads شركة -->
+    <script>
+(function(ekfxhm){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = ekfxhm || {};
+s.src = "\/\/belatedcan.com\/cRD.9b6obC2n5mlqSrWPQn9IN\/jOYw5xN\/DAg_4BMuiI0U2uNHjdkY0dOXD\/gUzg";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+
+    
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopkick: Gift Cards & Rewards - Earn Rewards While Shopping</title>
